feat: binaries build now